[package]
name = "kvs"
version = "0.1.0"
authors = ["Xpan Victor <xpanvictor@gmail.com>"]
description = "A key-value store"
edition = "2021"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = { version = "4.5.14", features = ["derive"] }
failure = {version = "0.1.8", features = ["derive"]}

[dev-dependencies]
assert_cmd = "2.0.15"
predicates = "3.1.2"
tempfile = "3.12.0"
walkdir = "2.5.0"
